# amazon-braket-sdk-python

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .sourcery.yaml  AHS.py  AHSAtom.py  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  PUBLICATION.md  PUBLICATIONS.md  README.md  braket_drawer_README.md  clifford.py  foo  lattice.py  polygon.py  program.py  pydoclint-baseline.txt  pyproject.toml  setup.cfg  setup.py  test_program.py  tox.ini
.git-template/hooks/: pre-commit
.github/: dependabot.yml  labeler.yml  pr-title-checker-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: update_dependency.py
.github/workflows/: additional-pr-checks.yml  build.yml  check-format.yml  code-freeze.yml  codeguru-scan.yml  codeql-analysis.yml  dependent-tests.yml  labeler.yml  ossf_scorecard.yml  pennylane-plugin-tests.yml  pr-title-checker.yml  publish-cheat-sheet.yml  publish-to-pypi.yml  python-package.yml  repo-sync.yml  stale_issue.yml  twine-check.yml  update-braket-publications.yml  update-publication.yml  update-publications.yml  validate-cheat-sheet.yml
doc/: Makefile  conf.py  examples-adv-circuits-algorithms.rst  examples-advanced-circuits-algorithms.rst  examples-analog-hamiltonian-simulation.rst  examples-braket-features.rst  examples-experimental-capabilities.rst  examples-getting-started.rst  examples-grover.rst  examples-hybrid-jobs.rst  examples-hybrid-quantum-algorithms.rst  examples-hybrid-quantum.rst  examples-ml-pennylane.rst  examples-nvidia-cuda-q.rst  examples-pennylane.rst  examples-pulse-control.rst  examples-qiskit.rst  examples-quantum-annealing-dwave.rst  examples-simple-circuits-algorithms.rst  examples.rst  genai_cheat_sheet.md  generate_examples.py  get_notebooks.sh  getting-started.rst  index.md  index.rst  requirements.txt  update_examples.py
doc/_templates/: module.rst.jinja  package.rst.jinja
doc/cheat_sheet/: Gemfile  LICENSE  README.md  Translation.md  _config.yml  cheatsheet.css  index.html
doc/cheat_sheet/_data/: blocks.yml
doc/cheat_sheet/_includes/: header.html
doc/cheat_sheet/_layouts/: default.html
doc/cheat_sheet/_scripts/: generate_genAI_cheat_sheet.py  generate_genai_cheat_sheet.py  generate_markdown.py  verify_snippets.py
doc/pages/badge/: braket_badge.md
doc/pages/courses/: braket_courses.md
doc/pages/examples/: advanced_braket_features.md  applications_and_industry_uses.md  continue_exploring.md  getting_started.md  quantum_algorithms_and_protocols.md  quantum_frameworks_and_plugins.md  quantum_hardware.md  quantum_sims.md
doc/pages/pathways/: educator.md  newcomer.md  researcher.md
examples/: ahs_lattice_factory.py  ahs_lattice_factory_demo.py  bell.py  bell_result_types.py  composite_operator_examples.ipynb  debug_bell.py  emulation.py  graphical_circuit_visualization.ipynb  hybrid_job.py  hybrid_job_script.py  job.py  local_bell.py  local_noise_simulation.py  plotly_circuit_visualization.py  reservation.py  u_gates.py
examples/autoqasm/: 1_Getting_started_with_AutoQASM.ipynb  2_Expressing_classical_control_flow.ipynb  3_1_Iterative_phase_estimation.ipynb  3_2_magic_state_distillation.ipynb  3_Iterative_phase_estimation.ipynb  4_Native_programming.ipynb  5_Pulse_programming_and_dynamical_decoupling.ipynb  6_Customize_gate_calibrations.ipynb  ionq_gates.py  openqasm_gates.py
examples/jobs/: algorithm_script.py  create_qaoa_job.ipynb  orchestration.ipynb  qaoa_orchestration.ipynb
examples/jobs/qaoa_source/: qaoa_algorithm_script.py  qaoa_utils.py
examples/jobs/source_dir/: qaoa_algorithm_script.py  qaoa_entry_point.py  qaoa_utils.py
examples/qcbm_job/: p_data.npy  qcbm_job.py  submit_job.py
local/: create_job_test.py
local/alpha_test_job/fancy_module/: more_stuff.py  my_file.py
practice_run/: test.py
src/: _test_emulator.py  braket_circuit_drawer.py
src/aqx/qdk/: __init__.py
src/braket/: ipython_utils.py
src/braket/_sdk/: __init__.py  _version.py
src/braket/ahs/: __init__.py  analog_hamiltonian_simulation.py  atom_arrangement.py  canvas.py  discretization_types.py  driving_field.py  field.py  hamiltonian.py  local_detuning.py  pattern.py  shifting_field.py  time_series.py
src/braket/annealing/: __init__.py  problem.py
src/braket/aws/: __init__.py  _aws_device_constants.py  aws_device.py  aws_emulation.py  aws_emulator_helpers.py  aws_jobs.py  aws_noise_models.py  aws_qpu.py  aws_qpu_arns.py  aws_quantum_job.py  aws_quantum_simulator.py  aws_quantum_simulator_arns.py  aws_quantum_task.py  aws_quantum_task_batch.py  aws_quantum_task_result.py  aws_session.py  direct_reservations.py  queue_information.py
src/braket/circuits/: __init__.py  angled_gate.py  ascii_circuit_diagram.py  basis_state.py  box_drawing_circuit_diagram.py  braket_program_context.py  circuit.py  circuit_analysis.py  circuit_diagram.py  circuit_from.py  circuit_helpers.py  circuit_pulse_sequence.py  circuit_utils.py  classical_operation.py  classical_operations.py  compiler_directive.py  compiler_directives.py  composite_operator.py  gate.py  (+36 more)
staging-scripts/: amend-staging-setup-commit.sh  create-feature-branch.sh  publish-branch.sh  remote-setup.sh
test/: test_hybrid_job_name.py
test/emulation/: test_emulator.py  test_local_emulator.py
test/integ_tests/: conftest.py  gate_model_device_testing_utils.py  job_test_script.py  job_testing_utils.py  simulator_assert_utils.py  test_adjoint_gradient.py  test_analog_hamiltonian_simulation.py  test_aws_session_s3.py  test_common.py  test_cost_tracking.py  test_create_local_quantum_job.py  test_create_quantum_job.py  test_density_matrix_simulator.py  test_device_creation.py  test_local_braket_simulator.py  test_local_noise_simulator.py  test_measure.py  test_pulse.py  test_quest_quantum_task.py  test_queue_information.py  test_queue_position.py  test_reservation_arn.py  test_simulator_quantum_task.py  test_tensor_network_simulator.py  test_user_agents.py
test/unit_tests/: conftest.py
tools/: braket_default_s3_bucket.cloudformation.yaml  braket_required_resources.cloudformation.yaml  create_braket_resources.py
(+794 files in other folders)
